feat: Allow to configure a Space Page Access Permission from Template - MEED-7457 - Meeds-io/meeds#2377 (#4018)
Prior to this change, when creating a space, all pages access
permissions are set to be accessible to all members. This change allows
to configure specific role(s) to make the page accessible to specific
membership type of space group.